# whaledo

./: README.md  download_and_move_model.py  main.py  pyproject.toml
hydra_plugins/hydra_submitit_launcher/: submitit_launcher.py
runtime/: conftest.py
scoring/: score_submission.py
static_conf/experiment/: moco.yaml  simclr.yaml
static_conf/hydra/launcher/: slurm_kyiv.yaml
submission_quickstart/: main.py
submission_src/: main.py
submission_src/whaledo/: models
whaledo/: metrics.py  optimizers.py  relay.py  schedulers.py  search.py  transforms.py  types.py
whaledo/algorithms/: base.py  loss.py  mean_teacher.py  memory_bank.py  moco.py  multicrop.py  simclr.py
whaledo/data/: datamodule.py  dataset.py  samplers.py
whaledo/models/: __init__.py  artifact.py  backbones.py  base.py  predictors.py  swinv2.py
whaledo/models/meta/: base.py  ema.py
