[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
known_third_party = ["PIL", "attr", "conduit", "fairscale", "faiss", "hydra", "loguru", "matplotlib", "numpy", "omegaconf", "pandas", "pytest", "pytorch_lightning", "ranzen", "sklearn", "timm", "torch", "torchvision", "tqdm", "typer", "typing_extensions"]
known_future_library = []
extra_standard_library = ["dataclasses", "__future__"]
line_length = 88
profile = "black"
force_sort_within_sections = "True"
classes = ["MISSING"]

[tool.poetry]
name = "whaledo"
version = "0.0.1"
description = ""
authors = ["Finding Bailey"]
license = "Apache License 2.0"
packages = [
  { include = "whaledo" },
]
classifiers=[
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
keywords=["typing", "python"]
repository=""
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.9.11,<3.11"
torch = "^1.11"
ranzen = {version = "*", extras = ["all"]}
scikit-learn = "0.24.2"
scikit-image = "0.18.2"
wandb = "^0.12.10"
attrs = "^21.4.0"
faiss-cpu = "^1.7.0"
setuptools = "59.5.0" # for pytorch-lightning
fairscale = "^0.4.5"
typing-extensions = ">=4.0"
deepspeed = { version = "^0.5.10", platform = "linux", optional = true }
triton = { version = "1.0.0", platform = "linux",  optional = true }
wrapt = "<1.14,>=1.11"
albumentations = "1.0.3"
transformers = "^4.19.2"
torch-conduit = "^0.1.1"
timm = "0.6.2.dev0"
loguru = "0.5.3"
typer = "^0.4.1"
hydra-core = "^1.2.0"
submitit = "^1.4.2"

[tool.poetry.extras]
deepspeed = ["deepspeed", "triton"]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2.2"
isort = "^5.7.0"
darglint = "^1.8.0"
pre-commit = "^2.19.0"
mypy = "^0.961"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.**"]
typeCheckingMode = "basic"
pythonVersion = "3.10"
reportUnusedImport = "error"
reportDuplicateImport  = "error"
reportIncompatibleVariableOverride = "error"
reportOverlappingOverload = "error"
reportUntypedNamedTuple = "error"
reportConstantRedefinition = "warning"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
strictListInference = true
strictSetInference = true
strictParameterNoneValue = true

[tool.mypy]
python_version = "3.9.7"
no_implicit_optional = true
allow_redefinition = true
strict_equality = true
check_untyped_defs = true
warn_unreachable = true
disallow_any_unimported = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
warn_unused_ignores = false
exclude = ["conf.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
